@@ -33,15 +33,6 @@ AC_ARG_ENABLE(gui,
     [  --enable-gui            compile with experimental GNOME output.  Default: off],
     [gui_b=$enableval])
 
-std_string=yes
-AC_ARG_ENABLE(std-string,
-    [  --enable-std-string     compile with std::string.  Default: on],
-    [std_string=$enableval])
-if test "$std_string" = "yes"; then
-    # Store in config.make rather than in config.hh and have every
-    # source file depend on that.
-    DEFINES="$DEFINES -DSTD_STRING=1"
-fi
 
 std_vector=yes
 AC_ARG_ENABLE(std-string,
