@@ -21,9 +21,6 @@ public:
   std::string ext_;
 
   File_name (std::string);
-#if 0// STD_STRING
-  File_name (String);
-#endif
 
   bool is_absolute () const;
   std::string to_string () const;
